forms: increase specificity of .hgroup input selector in order to avoid alignment glitches, fixes #6335

--- a/public/assets/stylesheets/less/forms.less
+++ b/public/assets/stylesheets/less/forms.less
@@ -158,12 +158,14 @@ form.default {
             margin-top: 0;
         }
 
-        input[type=date], input[type=email], input[type=number],
-        input[type=password], input[type=text], input[type=url],
-        textarea, select {
-            display: inline-block;
-            margin-top: 0;
-            width: auto;
+        &, label:not(.undecorated) {
+            input[type=date], input[type=email], input[type=number],
+            input[type=password], input[type=text], input[type=url],
+            textarea, select {
+                display: inline-block;
+                margin-top: 0;
+                width: auto;
+            }
         }
     }
 
